# multi_target_learning_MTL-

./: .flake8  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: code_quality_checks.yml
docs/: index.md
multi_target_learning_MTL/: __init__.py
tests/: test_multi_target_learning_MTL.py
